Created simple splash screen layout with background and logo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HandMeDown</string>
+    <string name="logo_image_description">HandMeDown logo image</string>
 </resources>
