Initial version of signin layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">HandMeDown</string>
     <string name="logo_image_description">HandMeDown logo image</string>
+    <string name="email_field_hint">Email</string>
+    <string name="password_field_hint">Password</string>
+    <string name="btn_forgot_password_text">Forgot Password?</string>
+    <string name="btn_login_text">Login</string>
+    <string name="text_no_account">Don\'t have an account?</string>
+    <string name="btn_register_text">Create</string>
 </resources>
